finally fixed the spacing on the smaller viewports on the patterns templates

--- a/src/_css/design-system/_design-system.scss
+++ b/src/_css/design-system/_design-system.scss
@@ -256,6 +256,7 @@ a {
   border-left: 0;
   padding-left: 0;
   margin-left: 0;
+  margin-bottom: 32px;
 
   li {
     margin-bottom: 12px;
@@ -310,22 +311,31 @@ a {
 
   &:before {
     position: absolute;
-    top: -2px;
+    top: -5px;
     z-index: 10;
-    margin-left: - 50px;
+    margin-left: -40px;
     content: '';
     display: inline-block;
     background: $grey-light;
     border-radius: 100%;
     height: 32px;
     width: 32px;
+
+    @include media(medium) {
+      top: -2px;
+      margin-left: -50px;
+    }
   }
 
   .icon {
     position: absolute;
-    top: 6px;
+    top: 3px;
     z-index: 11;
-    margin-left: - 2.1em;
+    margin-left: -2.1em;
+
+    @include media(medium) {
+      top: 6px;
+    }
   }
 }
 
@@ -353,10 +363,18 @@ table thead, table tbody td, table tbody td, table tbody th:after {
   @include spacing('margin', 'bottom', 'base');
 
   .link-back {
-    font-size: em-calc(20px);
+    font-size: em-calc(16px);
+
+    @include media(medium) {
+      font-size: em-calc(20px);
+    }
 
     .icon {
-      margin-left: -43px;
+      margin-left: -33px;
+
+      @include media(medium) {
+        margin-left: -43px;
+      }
     }
   }
 }
